# pyquac-light

./: README.md  app_test.ipynb  demo.ipynb  example_data.csv  interactive_app_demo.ipynb  pyproject.toml  spectroscopy_data.csv  template.py  test.ipynb  test_app.py
.ipynb_checkpoints/: interactive_app_demo-checkpoint.ipynb
src/pyquac_light/: __init__.py  app.py  app_layout.py  datatools.py  interactive_app.py
