[project]
name = "pyquac-light"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikolai Zhitkov", email = "nokolay.zh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "plotly>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anywidget>=0.9.18",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.2",
]
