[project]
name = "pyquac-light"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikolai Zhitkov", email = "nokolay.zh@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy<2.0.0",
    "plotly>=6.1.1",
    "ipywidgets>=8.1.7",
    "anywidget>=0.9.18",
    "notebook>=7.4.4",
    "kaleido==0.1.0.post1 ; os_name == 'nt'",
    "kaleido==0.1.0 ; os_name != 'nt'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
